fixed visibillity issue

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -243,7 +243,6 @@ body{
         &__close-icon{
             background: none;
             border: none;
-            display: block;
         }
         &__close-icon:hover, &__close-icon:focus{
             cursor: pointer;
